<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        app:showAsAction="collapseActionView"
        android:icon="@drawable/home"

        />
    <item
        android:id="@+id/nav_search"
        android:title="@string/search"
        app:showAsAction="collapseActionView"
        android:icon="@drawable/search"
        />
    <item
        android:id="@+id/nav_fav"
        android:title="@string/fav"
        app:showAsAction="collapseActionView"
        android:icon="@drawable/search"
        />
    <item
        android:id="@+id/nav_last"
        android:title="@string/last"
        app:showAsAction="collapseActionView"
        android:icon="@drawable/previous"
        />


</menu>