<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:backgroundTint="@color/background">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_marginTop="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/light_blue"
        />

    <Button
        android:id="@+id/search_button"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:text="@string/new_search"
        android:textSize="30sp"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        android:backgroundTint="@color/light_blue"
        android:textColor="@color/dark_blue"
        style="?attr/materialButtonOutlinedStyle"
        />

    <Button
        android:id="@+id/fav_list_button"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:text="@string/fav"
        android:textSize="30sp"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_button"
        android:backgroundTint="@color/dark_blue"
        android:textColor="@color/light_blue"
        style="?attr/materialButtonOutlinedStyle"
        />

</androidx.constraintlayout.widget.ConstraintLayout>