<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ArticleDisplayFragment">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ArticleDisplay">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/titleT"
            android:text="@string/title"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:layout_marginTop="30dp"
            android:layout_marginStart="50dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/titleT"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sectionT"
            android:text="@string/sec"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/section"
            android:layout_marginTop="30dp"
            android:layout_marginStart="50dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/sectionT"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/urlT"
            android:text="@string/url"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/section"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/url"
            android:layout_marginTop="30dp"
            android:layout_marginStart="50dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/urlT"
            app:layout_constraintStart_toStartOf="parent"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/backButton"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="10dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>